namespace Heroes.Core.Heroes.Interfaces;

public interface IMage
{
    public void MagicAttack(Person enemy);
}