namespace Heroes.Core.Heroes.Interfaces;

public interface IWarrior
{
    public void PhysicalAttack(Person enemy);
}