namespace Heroes.Core;

public interface IAttack
{
    public void Attack(Person enemy);
}