namespace Heroes.Core;

public abstract class Person
{
    public required string Name { get; init; } //TODO: добавить валидацию
}