namespace Heroes.Core.Weapons.Mage;

public interface IMageWeapon
{
    public int MageDamage { get; }
}