namespace Heroes.Core.Weapons.Physical;

public interface IPhysicalWeapon
{
    public int PhysicalDamage { get; init; }
}